<resources>
    <string name="app_name">Handler Test App</string>
    <string name="handler_basic_functions_button">Handler (basic functions)</string>
    <string name="handler_complex_functions_button">Handler (complex functions)</string>
    <string name="post_to_main_thread_text_view">Post to Main Thread</string>
    <string name="enable_disable_button">Enable/Disable button</string>
    <string name="random_color">Random color</string>
    <string name="delayed_2_sec">DELAYED - 2 sec</string>
    <string name="delayed_with_token_2_sec">DELAYED WITH TOKEN - 2 sec</string>
    <string name="show_toast">Show Toast</string>
    <string name="cancel_action">Cancel action</string>
    <string name="test_button">Test button</string>
</resources>