<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandlerLevelOneActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textViewPostToMainThread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_to_main_thread_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enable_disable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPostToMainThread"/>

    <Button
        android:id="@+id/randomColorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton"
        android:text="@string/random_color"/>

    <TextView
        android:id="@+id/textViewDelayedTwoSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delayed_2_sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/randomColorButton"/>

    <Button
        android:id="@+id/toggleDelayedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/enable_disable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDelayedTwoSeconds"/>

    <Button
        android:id="@+id/randomColorDelayedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleDelayedButton"
        android:text="@string/random_color"/>

    <TextView
        android:id="@+id/textViewDelayedTwoSecondsToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delayed_with_token_2_sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/randomColorDelayedButton"/>


    <Button
        android:id="@+id/randomColorTokenDelayedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDelayedTwoSecondsToken"
        android:text="@string/random_color"/>

    <Button
        android:id="@+id/showToastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomColorTokenDelayedButton"
        android:text="@string/show_toast"/>

    <Button
        android:id="@+id/cancelActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showToastButton"
        android:text="@string/cancel_action"/>

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelActionButton"
        android:text="@string/test_button"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"/>

    <FrameLayout
        android:id="@+id/colorView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testButton"
        android:layout_margin="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>